@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2005-10-10 15:40:26 $
+ * $Date: 2006-10-15 07:12:33 $
  *
  * Copyright 2005 Øyvind Kolås <pippin@freedesktop.org>
  * Copyright 2004-2005 MenTaLguY <mental@rydia.com>
@@ -251,4 +251,7 @@ Init_cairo_matrix (void)
   rb_define_method (rb_cCairo_Matrix, "set", cr_matrix_set, 6);
   rb_define_method (rb_cCairo_Matrix, "to_a", cr_matrix_to_a, 0);
   rb_define_method (rb_cCairo_Matrix, "to_s", cr_matrix_to_s, 0);
+
+
+  RB_CAIRO_DEF_SETTERS (rb_cCairo_Matrix);
 }
